# scidata

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
scidata/: __init__.py  data.py  dataset.py  file.py  root.py
