
# -- Project setup ---------------------------------------------------------------------

[metadata]
name = scidata
description = Python framework for storing scientific data in a directory structure.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dylanljones/scidata
author = Dylan Jones
author_email = dylanljones94@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Source = https://github.com/dylanljones/scidata
    Tracker = https://github.com/dylanljones/scidata/issues

[options]
packages = find:
install_requires =
    numpy>=1.21
    matplotlib>=3.0.0
    setuptools>=60.0.0
    setuptools-scm[toml]>=4.0.0
python_requires = >=3.7
include_package_data = True
platforms = any
zip_safe = False

[options.extras_require]
build =
    wheel>=0.37.0
test =
    pytest-cov>=3.0.0


# -- Tools -----------------------------------------------------------------------------

[aliases]
test=pytest


[pydocstyle]
add-ignore = D105  # ignore undocumented dunder methods like ``__str__`


[flake8]
max-line-length = 88
ignore = D203
extend-ignore = E203, W503
per-file-ignores = __init__.py:F401
exclude =
    .git,
    .idea,
    __pycache__,
    build,
    dist,
    _version.py,
